# gsm-alert

./: Cargo.toml  README.md
.cargo/: config
mcu/stm32f103/: openocd_cks32f1.cfg
src/: algorithm.rs  button.rs  door_sensor.rs  indication.rs  main.rs  sim900.rs  system_timer.rs  timer.rs  usart.rs  usart_adapter.rs
src/hardware/: mod.rs  system_timer.rs  usart_adapter.rs
src/utils/: atomic_types.rs  dynamic_cell.rs  global_cell.rs  mod.rs  span.rs
