[package]
name = "gsm_alert"
version = "0.1.0"
authors = ["loggi <loggi.ain@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more info for stm32 embedded rust
#https://github.com/rust-embedded/awesome-embedded-rust
[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "*"
#panic-halt = "0.2.0"
embedded-hal = "0.2.3"
heapless = "0.4.x"
nb = "0.1.2"
#[crate support for stm32f3discovery]
#hal = {version="0.5.0", package="stm32f3xx-hal",features=["stm32f303xc", "rt"]}
#[crate support for stm32f103]
hal = {version="0.6.0", package="stm32f1xx-hal",features=["stm32f103", "rt"]}

[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация

[profile.dev]
#panic = "abort"
codegen-units = 1
#debug = 0
#lto = true
#opt-level = "z"

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"